deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfe-front-deployment
  namespace: pfe  # Ensure the namespace is specified here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pfe-front
  template:
    metadata:
      labels:
        app: pfe-front
    spec:
      containers:
      - name: pfe-front
        image: default-route-openshift-image-registry.apps-crc.testing/pfe/pfe-front:latest
        ports:
        - containerPort: 3000
