service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfe-front-service
  namespace: pfe  # Ensure the namespace is specified here
spec:
  selector:
    app: pfe-front
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
