route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pfe-front-route
  namespace: pfe  # Ensure the namespace is specified here
spec:
  to:
    kind: Service
    name: pfe-front-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
